; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/irq/extr_devres.c_devm_free_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/irq/extr_devres.c_devm_free_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.irq_devres = type { i32, i8* }

@devm_irq_release = common dso_local global i32 0, align 4
@devm_irq_match = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @devm_free_irq(%struct.device* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.irq_devres, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = getelementptr inbounds %struct.irq_devres, %struct.irq_devres* %7, i32 0, i32 0
  %9 = load i32, i32* %5, align 4
  store i32 %9, i32* %8, align 8
  %10 = getelementptr inbounds %struct.irq_devres, %struct.irq_devres* %7, i32 0, i32 1
  %11 = load i8*, i8** %6, align 8
  store i8* %11, i8** %10, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @free_irq(i32 %12, i8* %13)
  %15 = load %struct.device*, %struct.device** %4, align 8
  %16 = load i32, i32* @devm_irq_release, align 4
  %17 = load i32, i32* @devm_irq_match, align 4
  %18 = call i32 @devres_destroy(%struct.device* %15, i32 %16, i32 %17, %struct.irq_devres* %7)
  %19 = call i32 @WARN_ON(i32 %18)
  ret void
}

declare dso_local i32 @free_irq(i32, i8*) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @devres_destroy(%struct.device*, i32, i32, %struct.irq_devres*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
